Modify homepage to include the recipes
Address of 3 recipes are added along with picture of cake for homepage.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/cake.jpg" width="500px" alt="A picture of cake">
+    <br>
+    <ul>
+        <li><h3><a href="recipes/chicken_curry.html">Chicken Curry</a></h3></li>
+        <li><h3><a href="recipes/fried_rice.html">Fried Rice</a></h3></li>
+        <li><h3><a href="recipes/egg_roll.html">Egg Roll</a></h3></li>
+    </ul>
 </body>
 </html>
